<resources>
    <string name="app_name">Simplify Technician</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="pause_job">Pause Job</string>
    <string name="resume_job">Resume Job</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="try_again">Try Again</string>
    <string name="technician">Technician</string>
    <string name="contract">Contract</string>
    <string name="in_progress">In Progress</string>
    <string name="paused">Paused</string>
    <string name="upcoming_job">Upcoming Job</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="un_assigned">Unassigned</string>
    <string name="overdue_job">Overdue Job</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_progress">%1$s / %2$s</string>
    <string name="err_title">Oops!</string>
    <string name="err_network">Network error, unable to load data, please try again!</string>
    <string name="err_no_internet">Slow or no internet connection. Please check your internet settings</string>
    <string name="err_token_expired">Token has expired, please login again</string>
    <string name="err_invalid_credentials">Username or password is wrong, please try again</string>
    <string name="err_forbidden_access">You don\'t have access rights</string>
    <string name="err_address_not_available">Sorry the service address is not available</string>
    <string name="err_take_picture_failed">Sorry, something went wrong. Please try again!</string>
    <string name="err_permission_camera_need">Camera access permission is required, please grant access it via settings </string>
    <string name="err_permission_read_need">Read internal storage access permission is required, please grant access it via settings </string>
    <string name="err_failed_to_select_date">Failed to select date, please try again!</string>
    <string name="err_printer">The PDA Device that you are using is not MUNBYN model IPDA064</string>
    <string name="err_signature_image">Signature has error, please try again to create signature</string>
    <string name="err_job_not_found">Job not available</string>
    <string name="err_inactive_account">Your account has been locked, please call our administrator to get information</string>
    <string name="err_job_already_updated">Job has been updated by other technician</string>
    <string name="err_service_item">Service Item not editable</string>
    <string name="err_other_has_started">Other job has started, complete first job in status IN PROGRESS</string>
    <string name="field_required">This field is required</string>
    <string name="email_not_valid">Please enter a valid email address</string>
    <string name="password_required_valid_format">Password must be at least 1 number, 1 lowercase letter, 1 uppercase letter, 1 symbol and minimal password length is 8</string>
    <string name="contact_number_not_valid">Please enter a valid contact number</string>
    <string name="history">History</string>
    <string name="text_greeting">Have a good day!</string>
    <string name="search">Search</string>
    <string name="search_equipment">Search by any order parameter</string>
    <string name="all_time">All Time</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change Password</string>
    <string name="no_job_found">No job found</string>
    <string name="no_equipment_details">No equipment details found</string>
    <string name="no_history_found">Please completed your job first</string>
    <string name="logout">Logout</string>
    <string name="status_in_progress">In Progress</string>
    <string name="confirmation_delete_item">Are you sure want to delete this?</string>
    <string name="today">Today</string>
    <string name="overdue">Overdue</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This Week</string>
    <string name="custom_date">Custom Date</string>
    <string name="login_now">Login Now</string>
    <string name="intro_title">Hello and Welcome!</string>
    <string name="intro_caption">Login to your account to access your job schedule and details.</string>
    <string name="login_title">Sign in to your technician account!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="forgot_title">Recover my password!</string>
    <string name="reset">Reset</string>
    <string name="resend">Resend</string>
    <string name="submit">Submit</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_caption">Enter the 4-digit code sent to your email</string>
    <string name="placeholder_code">●</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="retype_enter_new_password">Confirm New Password</string>
    <string name="input_new_password">Input Your New Password</string>
    <string name="change_your_old_password_with_new_password">Change your old password with new password</string>
    <string name="save_changes">Save Changes</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="swipe_to_start">SWIPE TO START</string>
    <string name="swipe_to_complete">SWIPE TO COMPLETE</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="title_history">History Page</string>
    <string name="history_detail">History Detail</string>
    <string name="call_customer">Call Customer</string>
    <string name="open_map">Open Map</string>
    <string name="job_detail">Job Detail</string>
    <string name="service_items">Service Items</string>
    <string name="item_s">item(s)</string>
    <string name="subtask_completed">Subtask completed</string>
    <string name="additional_items_is_empty">Additional items is empty</string>
    <string name="job_note_is_empty">Job notes is empty</string>
    <string name="text_job_type">Job Type</string>
    <string name="amount">Amount</string>
    <string name="gst_7">GST 7%</string>
    <string name="total_additional_items">Total Additional Items</string>
    <string name="balance">Balance</string>
    <string name="grand_total">Grand Total</string>
    <string name="total_amount">Total Amount</string>
    <string name="job_status">Job Status</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="job_notes_image">Job Notes Image</string>
    <string name="job_notes">Job Notes</string>
    <string name="add_note">Add Note</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="add_item">Add Item</string>
    <string name="edit_items">Edit Items</string>
    <string name="add_additional_items">Add Additional Items</string>
    <string name="edit_additional_items">Edit Additional items</string>
    <string name="additional_items">Additional Items</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="add_new">Add New</string>
    <string name="item_name">Item Name</string>
    <string name="item_cost">Item Cost</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="customer_signature">Customer Signature</string>
    <string name="signature_caption">Show this to customer for payment</string>
    <string name="clear">Clear</string>
    <string name="finish_job">Finish Job</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="choose_payment_methods">Choose Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="well_done">Well Done!</string>
    <string name="congrats_your_job_has_been_completed">Congrats! Your job has been completed.</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="back_to_home">Back To Home</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_collected">Total Collected</string>
    <string name="total_change">Total Change</string>
    <string name="paynow_qr_code">PayNow QR Code</string>
    <string name="tap_anywhere_to_close">Tap anywhere to close</string>
    <string name="payment_collected">Payment Collected</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_method">Payment Method</string>
    <string name="service_title_required">Service Title*</string>
    <string name="footer_thanks">Thank you for trusting our service</string>
    <string name="receipt">Receipt</string>
    <string name="client">Client</string>
    <string name="served_by">Served by</string>
    <string name="time">Time</string>
    <string name="sub_total">Sub Total</string>
    <string name="job_type">Job Type</string>
    <string name="amount_due">Amount Due</string>
    <string name="description">Description</string>
    <string name="show_previous_notes">Show Previous Notes</string>
    <string name="previous_notes">Previous Notes</string>
    <string name="previous_notes_is_empty">Previous notes is empty</string>
    <string name="edit_service_item">Edit Service Item</string>
    <string name="client_remarks_required">Client Remarks*</string>
    <string name="edit_client_remarks">Edit Client Remarks</string>
    <string name="job_progress">Job Progress:</string>
    <string name="subtask">Job Subtask</string>
    <string name="password_not_equal">Password Not Equal</string>
    <string name="change_pwd_successful">Change Password Successful</string>
    <string name="change_pwd_failed">Change Passwors Failde</string>
    <string name="google_maps">Google Maps</string>
    <string name="waze">Waze</string>
    <string name="subtask_items_is_empty">Job subtask is empty</string>
    <string name="remarks">Job Remarks</string>
    <string name="confirmation_pause_job">Are you want to paused this job?</string>
    <string name="allow_permission_in_setting">Allow permission in setting</string>
    <string name="settings">settings</string>
    <string name="link_forgot_password_sent_to_email">Link for change password has been sent to email</string>
    <string name="email_not_registered">Your email not registered, please try again!</string>
    <string name="recent_document">Recent Job Document</string>
    <string name="document_details">See Details</string>
    <string name="download">Download</string>
    <string name="please_enter_remarks_to_complete_job">Please enter remarks to complete job</string>
    <string name="you_have_incomplete_subtask">You have incomplete subtask</string>
    <string name="continu">Continue</string>
    <string name="warning_maps_app_not_installed">Please install google maps or waze to open the maps</string>
    <string name="documents_is_empty">Documents is empty</string>
    <string name="all_recent_job_documents">All Recent Job Documents</string>
    <string name="confirmation_resume_job">Are you want to resume this job?</string>
    <string name="image_saved">Image Saved</string>
    <string name="saving_image">Saving Image....</string>
    <string name="failed_download_image">Failed to Download Image! Please try again later</string>
    <string name="no_remarks_available">No remarks available</string>
    <string name="your_jobs">Your Jobs</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="title_activity_equipment_details">EquipmentDetails</string>
</resources>