<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/normal">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_signature"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signature_caption"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <noid.simplify.utils.view.SignatureView
        android:id="@+id/signature_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_signature"
        android:layout_marginTop="@dimen/normal"
        android:background="@drawable/background_signature_field"
        app:penColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <Button
        android:id="@+id/clear"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/signature_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signature_view" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:layout_marginStart="@dimen/small"
            android:enabled="true"
            android:text="@string/finish_job"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>