<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_service_item"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        tools:text="@string/add_additional_items"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:hint="@string/item_name"
        app:boxCornerRadiusTopStart="@dimen/small"
        app:boxCornerRadiusTopEnd="@dimen/small"
        app:boxCornerRadiusBottomStart="@dimen/small"
        app:boxCornerRadiusBottomEnd="@dimen/small"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        android:hint="@string/description"
        app:boxCornerRadiusTopStart="@dimen/small"
        app:boxCornerRadiusTopEnd="@dimen/small"
        app:boxCornerRadiusBottomStart="@dimen/small"
        app:boxCornerRadiusBottomEnd="@dimen/small"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        android:hint="@string/item_cost"
        app:prefixText="$ "
        app:boxCornerRadiusTopStart="@dimen/small"
        app:boxCornerRadiusTopEnd="@dimen/small"
        app:boxCornerRadiusBottomStart="@dimen/small"
        app:boxCornerRadiusBottomEnd="@dimen/small"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        android:hint="@string/quantity"
        app:boxCornerRadiusTopStart="@dimen/small"
        app:boxCornerRadiusTopEnd="@dimen/small"
        app:boxCornerRadiusBottomStart="@dimen/small"
        app:boxCornerRadiusBottomEnd="@dimen/small"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        android:hint="@string/total_amount"
        app:prefixText="$ "
        app:boxCornerRadiusTopStart="@dimen/small"
        app:boxCornerRadiusTopEnd="@dimen/small"
        app:boxCornerRadiusBottomStart="@dimen/small"
        app:boxCornerRadiusBottomEnd="@dimen/small"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/small"
            android:text="@string/save"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>

</LinearLayout>