<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/normal">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paynow_qr_code"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signature_caption"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <ImageView
        android:id="@+id/qrcode_view"
        android:layout_width="@dimen/width_qrcode"
        android:layout_height="@dimen/height_qrcode"
        android:layout_marginTop="@dimen/normal"
        android:background="@color/background"
        android:contentDescription="@string/paynow_qr_code"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        android:text="@string/tap_anywhere_to_close"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrcode_view" />

</androidx.constraintlayout.widget.ConstraintLayout>