<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal"
        app:behavior_hideable="false"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/width_line_sheet_top"
            android:layout_height="@dimen/tiny"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/intro_caption"
            app:layout_constraintTop_toBottomOf="@id/text"/>

        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/large"
            android:text="@string/close"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>